--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <h2 class="spacer"><img class="logo" src="images/todo.png" /> To Do List</h2>
 
         <input class="spacer" id="newTask" type="text" name="task" placeholder="Add a new task...">
+
         <button class="spacer" id="addTask">Add Task</button>
-        <ul class="list" id="tasks">
-        </ul>
+
+        <ul class="list" id="tasks"></ul>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
