--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title>To Do</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>To Do</title>
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 
-<body>
-    <div class="container">
-        <h2 class="spacer"><img class="logo" src="images/todo.png" /> To Do List</h2>
+    <body>
+        <div class="container">
+            <h2 class="spacer"><img src="images/todo.png" /> To Do List</h2>
 
-        <input class="spacer" id="newTask" type="text" name="task" placeholder="Add a new task...">
+            <input class="spacer" id="newTask" type="text" name="task" placeholder="Add a new task...">
 
-        <button class="spacer" id="addTask">Add Task</button>
+            <button class="spacer" id="addTask">Add Task</button>
 
-        <ul class="list" id="tasks"></ul>
+            <ul class="list" id="tasks"></ul>
 
-    </div>
+        </div>
 
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/script.js"></script>
-</body>
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script src="js/api.js"></script>
+        <script src="js/script.js"></script>
+    </body>
 
 </html>
